// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup Page Should render errors on fail 1`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand text-primary font-weight-bold"
        href="/"
      >
        C0D3
      </a>
      <div
        id="navbarNav"
      >
        <div
          class="navbar-nav collapse navbar-collapse"
        >
          <div
            class="navbar-nav collapse navbar-collapse"
          >
            <a
              class="nav-item nav-link active"
              href="/curriculum"
            >
              <span
                class="sr-only"
              >
                (current)
              </span>
              Curriculum
            </a>
            <a
              class="nav-item nav-link"
              href="https://github.com/garageScript/c0d3-app"
              rel="noopener noreferrer"
              target="_blank"
            >
              Repo
            </a>
            <a
              class="nav-item nav-link"
              href="https://www.notion.so/Table-of-Contents-a83980f81560429faca3821a9af8a5e2"
              rel="noopener noreferrer"
              target="_blank"
            >
              Journey
            </a>
            <a
              class="nav-item nav-link"
              href="https://chat.c0d3.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Help
            </a>
            <a
              class="nav-item nav-link"
              href="/contributors"
            >
              Contributors
            </a>
          </div>
        </div>
      </div>
      <div>
        <a
          class="btn btn-secondary border mr-3"
          href="/login"
        >
          Login
        </a>
        <a
          class="btn btn-secondary border mr-3"
          href="/signup"
        >
          Signup
        </a>
      </div>
    </div>
  </nav>
  <div
    class="container"
  >
    <div
      class="row mt-5"
    >
      <div
        class="card shadow-sm col-sm-8 col-md-7 col-lg-6 col-xl-6 m-auto px-md-5 border-0"
      >
        <div
          class="card-body text-center pt-5 pb-5"
        >
          <h1
            class="card-title h2 font-weight-bold mb-5"
          >
            Create Account
          </h1>
          <p
            class="card-text"
          />
          <div
            class="bg-light m-auto px-5 border-0"
            data-testid="error-message"
          >
            <h5
              class="text-danger"
            >
               Server cannot be reached. Please try again. If this problem persists, please send an email to support@c0d3.com
            </h5>
          </div>
          <form
            action="#"
            data-testid="form"
          >
            <div
              class="form-group "
            >
              <input
                class="form-control form-control-lg font-weight-light mb-3 "
                data-testid="email"
                name="email"
                placeholder="Email address"
                type="email"
                value="fake@email.com"
              />
              <input
                class="form-control form-control-lg font-weight-light mb-3 "
                data-testid="username"
                name="username"
                placeholder="Username"
                value="fakeusername"
              />
              <input
                class="form-control form-control-lg font-weight-light mb-3 "
                data-testid="firstName"
                name="firstName"
                placeholder="First name"
                value="fakefirstname"
              />
              <input
                class="form-control form-control-lg font-weight-light mb-3 "
                data-testid="lastName"
                name="lastName"
                placeholder="Last name"
                value="fakelastname"
              />
              <button
                class="btn btn-primary btn-lg btn-block mb-3"
                data-testid="submit"
                type="submit"
              >
                Create Account
              </button>
            </div>
          </form>
          <p
            class="text-black-50"
          >
            Already have an account?
             
            <a
              class="text-primary"
              href="/login"
            >
              Login
            </a>
          </p>
        </div>
      </div>
    </div>
  </div>
  <footer
    class="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2020 GarageScript
    <br />
    All Rights Reserved
  </footer>
</div>
`;

exports[`Signup Page Should render success component on success 1`] = `
<div>
  <nav
    class="navbar navbar-expand-lg navbar-light justify-content-between bg-white"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand text-primary font-weight-bold"
        href="/"
      >
        C0D3
      </a>
      <div
        id="navbarNav"
      >
        <div
          class="navbar-nav collapse navbar-collapse"
        >
          <div
            class="navbar-nav collapse navbar-collapse"
          >
            <a
              class="nav-item nav-link active"
              href="/curriculum"
            >
              <span
                class="sr-only"
              >
                (current)
              </span>
              Curriculum
            </a>
            <a
              class="nav-item nav-link"
              href="https://github.com/garageScript/c0d3-app"
              rel="noopener noreferrer"
              target="_blank"
            >
              Repo
            </a>
            <a
              class="nav-item nav-link"
              href="https://www.notion.so/Table-of-Contents-a83980f81560429faca3821a9af8a5e2"
              rel="noopener noreferrer"
              target="_blank"
            >
              Journey
            </a>
            <a
              class="nav-item nav-link"
              href="https://chat.c0d3.com"
              rel="noopener noreferrer"
              target="_blank"
            >
              Help
            </a>
            <a
              class="nav-item nav-link"
              href="/contributors"
            >
              Contributors
            </a>
          </div>
        </div>
      </div>
      <div>
        <a
          class="btn btn-secondary border mr-3"
          href="/login"
        >
          Login
        </a>
        <a
          class="btn btn-secondary border mr-3"
          href="/signup"
        >
          Signup
        </a>
      </div>
    </div>
  </nav>
  <div
    class="container"
  >
    <div
      class="row mt-5"
    >
      <div
        class="card shadow-sm col-sm-8 col-md-7 col-lg-6 col-xl-6 m-auto px-md-5 border-0"
      >
        <div
          class="card-body text-center pt-5 pb-5"
        >
          <svg
            class="mb-4"
            height="100px"
            viewBox="0 0 426.667 426.667"
            width="100px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="active-path"
              d="M293.333 135.04L190.08 240.213l-52.907-53.12-28.373 28.374 83.413 83.2 133.974-129.92z"
              fill="#00CF92"
            />
            <path
              class="active-path"
              d="M213.333 0C95.513 0 0 95.513 0 213.333s95.513 213.333 213.333 213.333 213.333-95.513 213.333-213.333S331.154 0 213.333 0zm0 388.053c-96.495 0-174.72-78.225-174.72-174.72s78.225-174.72 174.72-174.72c96.446.117 174.602 78.273 174.72 174.72 0 96.496-78.224 174.72-174.72 174.72z"
              fill="#00CF92"
            />
          </svg>
          <h1
            class="card-title h2 font-weight-bold mb-5"
          >
            Account created successfully!
          </h1>
          <p
            class="card-text"
          />
          <p>
            You will receive a link to confirm your email address and to set your password.
          </p>
        </div>
      </div>
    </div>
  </div>
  <footer
    class="mt-5 font-weight-light text-center pb-5 text-muted"
  >
    © Copyright 2020 GarageScript
    <br />
    All Rights Reserved
  </footer>
</div>
`;
